# dx12-sandbox

./: .gitmodules  CMakeLists.txt  License.txt  README.md  gen_vs2019.bat
CMakeModules/: target_files.cmake
Sources/HelloWindow/: CMakeLists.txt  CommandAllocatorPool.cpp  CommandAllocatorPool.h  MainWindow.cpp  WindowDX12.cpp  WindowDX12.h
Sources/HelloWindow/shaders/: TestShader.hlsl
Sources/RenderingCore/: BlockAllocator.h  CMakeLists.txt  CmdListRecording.h  CommandAllocatorPool.h  DescriptorHeapAllocator.h  DeviceConfig.h  ResourceUploader.h
Sources/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.cpp  ShaderCompiler.h
Sources/Utils/: CMakeLists.txt  DebugCheck.h
